# microservices/api/doc/swagger.json
@@ -13,6 +13,10 @@
       "description": "Everything about authentication"
     },
     {
+      "name": "contact",
+      "description": "Everything about contact"
+    },
+    {
       "name": "user",
       "description": "Everything about user"
     }
@@ -89,6 +93,50 @@
           },
           "404": {
             "description": "Not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/contact": {
+      "post": {
+        "tags": [
+          "contact"
+        ],
+        "summary": "Send an email",
+        "operationId": "contact",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "payload",
+            "in": "body",
+            "description": "Contact payload",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "subject": {
+                  "type": "string",
+                  "example": "Partnership"
+                },
+                "text": {
+                  "type": "string",
+                  "example": "Hello World!"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Bad request"
           },
           "500": {
             "description": "Internal server error"
